2010-05-27  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* parse_aprs.c:
	    Correct parse of message recipients.
	    Fix from Patrick Domack K3PDK.

2010-05-26  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* debian/rules, rpm/aprx.spec.in, aprsis.c:
	    Fixes on pthread:ed aprsis implementation.
	    Default packaging for Debian and RPM to use --with-pthread.
	    Now it shows only one "process", and two threads.
	    This makes the program portable to uCLinux, and possibly
	    to Windows.

	* dprsgw.c, aprx.h, ttyreader.c, Makefile.in, interface.c,
	  aprx.8.in, aprx.conf.in, aprx-complex.conf.in:
	    Add basic configuration and infra of DPRS-to-APRS gw.

	* interface.c, igate.c:
	    Comment editing, adding Tx-IGate Rule 4, second half.
	    First half probably exists in igate..

2010-05-25  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* aprx.c, README, TODO, VERSION:
	    Mark version 1.99, APRX1G

2010-05-25  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* interface.c, filter.c:
	    Filtering logic change on 3rd-party digipeating.

2010-05-24  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* interface.c, TODO:
	    Notes about missing bits for full Tx-IGate.

	* historydb.c, historydb.h:
	    Keep knowledge of last coordinate on historydb.
	    Mark also last coordinate update time.

	* aprx.h, pbuf.h, parse_aprs.c, interface.c, digipeater.c:
	    Tx-IGate processing details..

2010-05-23  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* aprx.c, aprx.h, digipeater.c, filter.c, historydb.c, historydb.h,
	  igate.c, interface.c, parse_aprs.c:
	    Rearranged bits so that Tx-IGate's processing has transmitter
	    specific history database.   Better (but yet a bit incomplete)
	    Tx-IGate filtering is in interface.c.

	* kiss.c, aprx.8.in, aprx.conf.in, aprx-complex.conf.in,
	  netax25.c, aprx.h, ttyreader.c:
	    Add FLEXNET support.  (Finnish HamDR speaks it by default!)

	* interface.c: